<resources>
    <string name="title_home">خانه</string>
    <string name="dashboard">داشبورد</string>
    <string name="title_notifications">اعلان\u200cها</string>
    <string name="exit_by_press_again">لطفا جهت خروج، دکمه\u200cی بازگشت را مجدد کلیک کنید</string>
    <string name="delete_by_press_again">لطفا جهت حذف، دکمه را مجدد کلیک کنید</string>
    <string name="return_by_press_again">لطفا جهت بازگشت به صفحه\u200cی پیشین، دکمه\u200cی بازگشت را مجدد کلیک کنید</string>
    <string name="skip">برو بعدی</string>
    <string name="done">انجام شد</string>
    <string name="waiting">لطفا صبر کنید…</string>
    <string name="turn_internet_on">خطای ارتباط، وضعیت اینترنت خود را بررسی کنید</string>
    <string name="canceled">عملیات متوقف شد.</string>
    <string name="welcome_to_abfa">به همراه آبفا خوش آمدید</string>
    <string name="mobile_tip">با وارد نمودن شماره موبایل، یک کد تایید برای شما ارسال خواهد شد</string>
    <string name="mobile_hint">09*********</string>
    <string name="sign_in_up">ورود / ثبت نام</string>
    <string name="_6_dashes">------</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="account_submit">ثبت انشعاب</string>
    <string name="account_title">عنوان انشعاب</string>
    <string name="enter_bill_id">شناسه قبض را وارد کنید…</string>
    <string name="tap">ضربه بزنید</string>
    <string name="record_voice">ضبط صدا</string>
    <string name="services">خدمات</string>
    <string name="incident">حوادث</string>
    <string name="incident_description">در صورت بروز حادثه در کوتاه\u200cترین زمان نسبت به ثبت حادثه اقدام فرمایید\nهمکاران آب و فاضلاب در اسرع وقت با مشاهده\u200cی اعلام حادثه نسبت به اعزام و رفع مشکل اقدام خواهند کرد</string>
    <string name="incident_type">نوع حادثه</string>
    <string name="upload_image">بارگذاری عکس</string>
    <string name="submit">ثبت</string>
    <string name="start_now">همین الان شروع کن</string>
    <string name="enter_mobile_title">ورود شماره تلفن</string>
    <string name="confirmation_code">کد تایید 4 رقمی</string>
    <string name="enter_code">کد ارسال شده را وارد نمایید.</string>
    <string name="one_minute">00:60</string>
    <string name="send_again">ارسال مجدد</string>
    <string name="enter_mobile">شماره موبایل را وارد کنید</string>
    <string name="mobile_error">شماره موبایل به درستی وارد نشده است</string>
    <string name="mobile">شماره موبایل </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay_bill">پرداخت قبض</string>
    <string name="counter_number_submit">اعلام کارکرد کنتور</string>
    <string name="history_usage">سوابق خوداظهاری</string>
    <string name="protest_submit">شهروند مروج</string>
    <string name="cart">تاریخچه صورت\u200cحساب</string>
    <string name="requests">درخواست\u200cها</string>
    <string name="last_bills">قبض آخر</string>
    <string name="change_number">تغییر موبایل</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="sign_account">ثبت انشعاب</string>
    <string name="bill_id">شناسه قبض</string>
    <string name="go_continue">ادامه</string>
    <string name="description">توضیحات</string>
    <string name="enter_incident_description">شرح حادثه را ارائه نمایید</string>
    <string name="voice_storage_permission_granted">دسترسی لازم جهت پخش صدا داده شد</string>
    <string name="voice_storage_permission_unavailable">دسترسی پخش صوت اعطا نشده است</string>
    <string name="voice_recorder_permission_granted">دسترسی لازم جهت ضبط صدا داده شد</string>
    <string name="voice_recorder_permission_unavailable">دسترسی ضبط صوت اعطا نشده است</string>
    <string name="camera_permission_granted">دسترسی لازم جهت گرفتن عکس داده شد</string>
    <string name="camera_permission_unavailable">دسترسی گرفتن عکس اعطا نشده است</string>
    <string name="timer_zero">00:00</string>
    <string name="voice_file_name">/voice.ogg</string>
    <string name="enter_your_account">انشعاب خود را وارد کنید…</string>
    <string name="owner">صاحب امتیاز</string>
    <string name="payment_services">خدمات پرداخت</string>
    <string name="help_content_services">شرکت آب و فاضلاب استان اصفهان در راستای خدمت رسانی به شهروندان عزیز اقدام به ارائه خدمات غیرحضوری نموده است. شهروندان می\u200cتوانند در 24 ساعت شبانه روز با مراجعه به اپلیکیشن همراه آبفا خدمات مورد نظر خود را دریافت نمایند</string>
    <string name="help_content_payment">می\u200cتوانید به راحتی استعلام قبض آب را انجام داده و در صورت تمایل اقدام به پرداخت نمایید. همچنین امکان پرداخت دسته جمعی قبوض در این اپلیکیشن فراهم شده تا به سهولت تنها با یک بار مراجعه به درگاه\u200cهای بانکی، کلیه قبوض مد نظر شما پرداخت گردد</string>
    <string name="help_content_dashboard">مشترک گرامی، می\u200cتوانید با استفاده از اپلیکیشن همراه آبفا اطلاعات بصری و آماری از نحوه مصرف آب، میزان مصرف بهینه آب، نحوه پرداخت، میزان خوش حسابی و برخی اطلاعات سودمند دیگر در یک سال اخیر، کسب اطلاع فرمایید</string>
    <string name="help_content_citizen">هم\u200cاستانی\u200cها می\u200cتوانند در صورت مشاهده مصرف بی رویه آب از جمله شستشوی معابر، نشت کولر، آبیاری فضای سبز با آب شهری، پر سازی استخر، شستشوی خودرو، شستشوی فرش و از همه مهم\u200cتر انشعاب غیرمجاز و نصب پمپ مستقیم بر روی شبکه، از طریق بخش شهروند مروج اطلاع\u200cرسانی نمایند تا در اولین فرصت توسط مروجین مصرف بهینه آب شرکت آبفای استان اصفهان اقدام لازم صورت گیرد</string>
    <string name="help_content_incident">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد</string>
    <string name="bill_id_repetitive">شناسه قبض تکراری است</string>
    <string name="active_devices">دستگاه\u200cهای فعال</string>
    <string name="change_theme">تغییر قالب</string>
    <string name="help">راهنمای آبفا</string>
    <string name="update">بروزرسانی</string>
    <string name="share">اشتراک گذاری</string>
    <string name="my_account">حساب من</string>
    <string name="account_sale">فروش انشعاب</string>
    <string name="ab_baha">آب بها</string>
    <string name="service_after_sale">خدمات پس از فروش</string>
    <string name="service_introduce">معرفی</string>
    <string name="service_submit">ثبت</string>
    <string name="service_confirm">تایید</string>
    <string name="next_level">مرحله بعد</string>
    <string name="choose_a_service">یکی از خدمات را انتخاب کنید</string>
    <string name="previous">مرحله قبل</string>
    <string name="address">نشانی</string>
    <string name="confirm_information">تایید اطلاعات</string>
    <string name="submit_location">ثبت محل</string>
    <string name="locate_address">نشانی روی نقشه مشخص نشده است</string>
    <string name="incorrect_postal_code_format">فرمت کد پستی صحیح نیست</string>
    <string name="incorrect_nation_code_format">فرمت کد ملی صحیح نیست</string>
    <string name="incorrect_bill_id_format">فرمت شناسه قبض صحیح نیست</string>
    <string name="incorrect_mobile_format">فرمت موبایل صحیح نیست</string>
    <string name="fill_in_address">نشانی را وارد کنید</string>
    <string name="main_page">صفحه اصلی</string>
    <string name="request_submitted">درخواست شما با موفقیت ثبت شد</string>
    <string name="write_track_number">کد رهگیری خود را یادداشت کنید</string>
    <string name="confirm">تایید</string>
    <string name="make_sure_internet_is_connected">ارتباط اینترنت خود را بررسی کنید</string>
    <string name="cancel">لغو</string>
    <string name="setting">تنظیمات</string>
    <string name="gps_settings">تنظیمات جی\u200cپی\u200cاس</string>
    <string name="enable_gps">جی\u200cپی\u200cاس غیرفعال است. آیا می\u200cخواهید جی\u200cپی\u200cاس را روشن کنید؟</string>
    <string name="choose_incident_type">نوع حادثه را انتخاب کنید</string>
    <string name="field_incident_description">توضیح متنی را وارد کنید یا صدا ضبط کنید</string>
    <string name="start">شروع</string>
    <string name="save_format_name">yyyyMMdd_HHmmss</string>
    <string name="stop_recording_playing">ضبط/پخش صدا را متوفق کنید</string>
    <string name="last_login">آخرین ورود</string>
    <string name="ip">آی پی</string>
    <string name="change_size">اندازه قلم</string>
    <string name="theme_based_on_device">مطابق دستگاه</string>
    <string name="theme_light">روشن</string>
    <string name="theme_dark">تیره</string>
    <string name="restart_app">اپلیکیشن را باز و بسته نمایید</string>
    <string name="bill_price">مبلغ قابل پرداخت</string>
    <string name="pay">پرداخت</string>
    <string name="track_number">شماره پیگیری</string>
    <string name="enter_track_number">کد پیگیری را وارد کنید</string>
    <string name="counter_number">شماره کنتور</string>
    <string name="enter_counter_number">شماره کنتور را وارد کنید</string>
    <string name="create_bill">صدور قبض</string>
    <string name="news">اخبار</string>
    <string name="request_type">نوع درخواست</string>
    <string name="unfinished_requests">نیمه تمام</string>
    <string name="finished_requests">پایان یافته</string>
    <string name="bill_id_help">برای تغییر شناسه\u200cی قبض، کاردهای صفحه\u200cی خانه را جابجا کنید</string>
    <string name="mobile_number_old">موبایل پیشین</string>
    <string name="new_mobile_number">موبایل جدید</string>
    <string name="repetitive_mobile">شماره موبایل باید متفاوت باشد</string>
    <string name="search">جستجو</string>
    <string name="search_track">جستجوی کد پیگیری</string>
    <string name="deter_location">تعیین محل</string>
    <string name="change_appearance">تغییر ظاهر</string>
    <string name="criticize">انتقاد و پیشنهاد</string>
    <string name="complaint">شکایت</string>
    <string name="faq">سوالات متداول</string>
    <string name="branches">شعب</string>
    <string name="forbidden">انشعاب غیرمجاز</string>
    <string name="phones">تلفن\u200cها</string>
    <string name="developers">توسعه\u200cدهندگان</string>
    <string name="help_services">خدمات غیرحضوری</string>
    <string name="help_payment">خدمات پرداخت و مطالبات</string>
    <string name="help_dashboard">داشبورد مدیریتی</string>
    <string name="help_citizen">شهروند مروج</string>
    <string name="help_incident">حوادث آبفا</string>
    <string name="manager_name">نام مدیر</string>
    <string name="zone_name">منطقه</string>
    <string name="fax">فکس</string>
    <string name="postal_code">کد پستی</string>
    <string name="optional_postal_code">کد پستی (اختیاری)</string>
    <string name="phone_number">تلفن</string>
    <string name="location">محل</string>
    <string name="road_external">مسیریابی خارجی</string>
    <string name="road_internal">مسیریابی داخلی</string>
    <string name="gps_is_not_available">دستگاه شما مجهز به مسیریاب نیست.</string>
    <string name="not_found">موردی یافت نشد</string>
    <string name="no_data_found">داده\u200cای یافت نشد</string>
    <string name="call_permission_granted">دسترسی تماس داده شد</string>
    <string name="call_permission_unavailable">دسترسی تماس داده نشد</string>
    <string name="saved_in_clipboard">در کلیپ برد ذخیره شد</string>
    <string name="complaint_description">در صورت نارضایتی از ارائه\u200cی خدمات می\u200cتوانید شکایت خود را ارائه دهید.</string>
    <string name="complaint_type">نوع شکایت</string>
    <string name="enter_complaint_description">شرح شکایت را ارائه نمایید</string>
    <string name="choose_complaint_type">نوع شکایت را انتخاب کنید</string>
    <string name="enter_postal_code">کد پستی را وارد کنید</string>
    <string name="pre_account">اشتراک قبلی (اختیاری)</string>
    <string name="enter_pre">اشتراک قبلی را وارد کنید</string>
    <string name="next_account">اشتراک بعدی (اختیاری)</string>
    <string name="enter_next">اشتراک بعدی را وارد کنید</string>
    <string name="exit_account">خروج از حساب</string>
    <string name="connected_account">اتصال اشتراک\u200cها</string>
</resources>