<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.leon.moshtarak.fragments.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.app.leon.moshtarak.fragments.ui.dashboard.DashboardBaseFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard_base" />
    <fragment
        android:id="@+id/navigation_incident"
        android:name="com.app.leon.moshtarak.fragments.ui.incident.IncidentFragment"
        android:label="@string/incident"
        tools:layout="@layout/fragment_incident" />
    <fragment
        android:id="@+id/navigation_services"
        android:name="com.app.leon.moshtarak.fragments.ui.services.ServiceFragment"
        android:label="@string/services"
        tools:layout="@layout/fragment_service" />
</navigation>