<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="@dimen/huge_dp"
    tools:context=".fragments.SubmitInfoFragment">

    <TextView
        android:id="@+id/text_view_title"
        style="@style/Title"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/huge_dp"
        android:text="@string/account_submit"
        android:textColor="@color/purple_7001" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_view_title_account"
        style="@style/TextInput"
        android:layout_below="@id/text_view_title"
        android:layout_centerInParent="true"
        android:hint="@string/account_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_view_bill_id"
        style="@style/TextInput"
        android:layout_below="@id/text_view_title_account"
        android:hint="@string/enter_bill_id" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_phone_number"
        style="@style/Linearlayout"
        android:layout_width="match_parent"
        android:layout_below="@id/text_view_bill_id"
        android:background="@drawable/background_blue">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextButtonStyle"
            android:text="09134588220" />

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/CustomImageView"
            android:src="@drawable/smartphone" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit"
        style="@style/LoginButtonSubmit"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/huge_dp"
        android:text="@string/sign_in_up" />
</RelativeLayout>