<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/huge_dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".fragments.bottom_sheets.SubmitInfoFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:src="@drawable/arrow_down" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_title"
        style="@style/Title"
        android:layout_below="@id/image_view_arrow_down"
        android:layout_marginTop="@dimen/huge_dp"
        android:layout_marginBottom="@dimen/large_dp"
        android:layout_toEndOf="@id/image_view_plus"
        android:text="@string/account_submit" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_plus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/image_view_arrow_down"
        android:layout_marginTop="@dimen/huge_dp"
        android:layout_marginEnd="@dimen/medium_dp"
        android:padding="@dimen/low_dp"
        android:src="@drawable/plus"
        android:tint="@color/purple_7001" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_account_title"
        style="@style/TextInputLayout"
        android:layout_below="@id/text_view_title"
        android:hint="@string/account_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_account_title"
            style="@style/TextInput"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_bill_id"
        style="@style/TextInputLayout"
        android:layout_below="@id/text_layout_account_title"
        android:hint="@string/bill_id"
        app:counterMaxLength="11">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_bill_id"
            style="@style/TextInput"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit"
        style="@style/ButtonSubmit"
        android:layout_below="@id/text_layout_bill_id"
        android:text="@string/sign_account" />
</RelativeLayout>