<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.leon.hamrah_abfa.fragments.contact_us.ComplaintViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/large_dp"
        tools:context=".fragments.contact_us.ContactComplaintFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_content"
            style="@style/CardStyle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/large_dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_dp"
                    android:src="@drawable/info" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_dp"
                    android:layout_toEndOf="@id/image_view_info"
                    android:text="@string/complaint_description"
                    android:textAppearance="@style/TextStyleSmall.Bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/menu"
                    style="@style/MenuLayout"
                    android:layout_below="@id/text_view_description"
                    android:layout_marginTop="@dimen/large_dp"
                    android:layout_marginBottom="@dimen/large_dp"
                    android:hint="@string/complaint_type">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/edit_text_incident_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:inputType="none"
                        android:text="@={viewModel.complaintType}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_description"
                    style="@style/TextInputLayout"
                    android:layout_below="@id/menu"
                    android:hint="@string/description"
                    app:counterEnabled="true"
                    app:counterMaxLength="1000"
                    app:helperText="@string/enter_complaint_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_description"
                        style="@style/TextInput"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:maxLength="1000"
                        android:maxLines="3"
                        android:text="@={viewModel.description}" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <GridView
            android:id="@+id/grid_view_images"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/xlarge_dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view_content"
            android:background="@drawable/background_incident_field"
            android:numColumns="5"
            tools:listitem="@layout/item_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_submit"
            style="@style/ButtonSubmit"
            android:layout_alignParentBottom="true"
            android:text="@string/submit" />
    </RelativeLayout>
</layout>